# platformik

./: .env.example  .gitignore  .mcp.json  .mise.toml  .prettierignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.test.yml  docker-compose.yml  eslint.config.mjs  knip.jsonc  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.mjs  pyproject.toml  tsconfig.base.json  tsconfig.json
.bruno/: opencollection.yml
.bruno/ai-providers/: list.yml
.bruno/api-platform-ts/: folder.yml
.bruno/environments/: local.yml
.bruno/iam/: folder.yml  sign-up.yml
.bruno/service-workflows-ts/: GetWorkflowState.yml  ListWorkflows.yml  StartWorkflow.yml  SubmitAnswer.yml  folder.yml
.claude/: settings.json
.codex/: config.toml
.moon/: tasks.yml  toolchain.yml  toolchains.yml  workspace.yml
.moon/tasks/: content.yml  python.yml  ts.yml  typescript.yml
apps/api-platform-ts/: AGENTS.md  REFACTORING.md  moon.yml  package.json
apps/service-ai-py/: .gitignore  moon.yml  pyproject.toml
apps/service-ai-py/src/platformik_service_ai/: cli.py  config.py  container.py  main.py
apps/service-ai-py/src/platformik_service_ai/temporal/: activities.py  types.py  workflow.py
apps/service-ai-py/src/platformik_service_ai/tui/: client.py  loop.py  registry.py  types.py
apps/service-ai-py/src/platformik_service_ai/tui/commands/: __init__.py  attach.py  help.py  quit.py  start.py  status.py  workflows.py
apps/service-ai-py/src/platformik_service_ai/workflows/: programming_language.json  question.json
docs/: README.md
memory/: MEMORY.md
scripts/: README.md
(+262 files in other folders)
