[project]
name = "service-ai-py"
version = "0.0.1"
requires-python = ">=3.13"
dependencies = ["temporalio>=1.23.0", "typer>=0.24.1"]

[dependency-groups]
dev = [
    "pyright==1.1.408",
    "pytest>=9.0.2",
    "ruff>=0.15.6",
]

[tool.uv]
package = true

[tool.ruff]
extend = "../../configs/python/ruff.toml"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[project.scripts]
service-ai = "platformik_service_ai.cli:app"
service-ai-worker = "platformik_service_ai.main:main"
